* Fri Mar 26 2021 Steven Pritchard <steven.pritchard@onyxpoint.com> - 2.6.3
- Fix dependency cycle when using vox_selinux::boolean

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.6.3
- Removed EL6 support

* Fri Nov 20 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 2.6.2-0
- Fixed a bug in which the module would attempt to create `selinux_login`
  resources when `selinux::login_resources` was set but selinux was disabled.
  This resulted in an error message 'Could not find a suitable provider
  for selinux_login' during catalog compilation.

* Wed Nov 18 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.6.1-0
- Allow users to include `selinux::install` without needing full SELinux system
  management. This is particularly important when the native types are to be
  used in different modules but you don't want to include full management just
  to get the required packages.

* Mon Sep 21 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.6.0-0
- No longer enable or install mcstransd by default
  - It is a user convenience feature and not required for core functionality
- Ensure that mcstransd is added to the GID assigned to `/proc` if one is
  assigned on the system

* Mon Jan 13 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.5.1-0
- Add EL8 defaults for Oracle Linux

* Wed Nov 06 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.5.1-0
- Defined values for EL8 in data in modules.
- Updated Gemfile versions to ones that support EL8.
- Updated metadata.json to include support for CentOS 8 and RedHat 8
- Added acceptance test  nodes for CentOS 8 and RedHat 8
- Removed $:: from top level variables.
- Removed tests for Puppet 4 from travis.yml.
- Bumped upper bound for simp-simplib to < 5.0.0

* Fri Jun 28 2019 Steven Pritchard <steven.pritchard@onypoint.com> - 2.5.0-0
- Add v2 compliance_markup data
- Add support for puppetlabs-stdlib 6

* Fri Jun 14 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.1-0